recursion.cons.ismember.IsMember.scala.error
Compilation error:
IsMember:5: error: '(' expected but '{' found.
  else if {(v==l.head)
          ^IsMember:10: error: illegal start of simple expression
} 
^